[project]
name = "vidtoolz-split"
version = "0.0.1"
description = "Split a video into two"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "vidtoolz",
    "vidtoolz-trim",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/vidtoolz-split"
Changelog = "https://github.com/sukhbinder/vidtoolz-split/releases"
Issues = "https://github.com/sukhbinder/vidtoolz-split/issues"
CI = "https://github.com/sukhbinder/vidtoolz-split/actions"

[project.entry-points."vidtoolz_plugins"]
split = "vidtoolz_split:split_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
